refactor: forward 내부에서 status, header 다룰 수 있도록 변경